--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Copyright added-->
 <head>
 	<title>A Simple Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
