--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<!-- Copyright added-->
+<!-- Copyright added
+ adding line before rebasing conflicts
+-->
 <head>
 
 	<title>A Great Website</title>
