--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <!-- Copyright added
  adding line before rebasing conflicts
+ dsfsdfgsfbdsghshlkg
 -->
 <head>
 
-	<title>A Great Website</title>
+	<title>A yadya Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +19,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Anything
+			asfsdfsdfsgfsdf
 		</p>
 	</main>
 	<footer class="container">
