adding changes after rebasing conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <!-- Copyright added
  adding line before rebasing conflicts
- dsfsdfgsfbdsghshlkg
 -->
 <head>
 
-	<title>A yadya Website</title>
+	<title>A Vegli Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
