comming changes from local master

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!-- Copyright added
- adding line before rebasing conflicts
+ again changing from local
 -->
 <head>
 
-	<title>A Vegli Website</title>
+	<title>A kay he Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Kaypan 2014</p>
+		<p>&copy; jau de Kaypan 2014</p>
 	</footer>
 </body>
 </html>
