completed modifying simple file

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 -->
 <head>
 
-	<title>A kay he Website</title>
+	<title>Updating tge tiltle for stashings</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			dfsdfsdf
+			yadya ahe tu.
 		</p>
 	</main>
 	<footer class="container">
