--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 -->
 <head>
 
-	<title>Updating tge tiltle for branch stashings</title>
+	<title>Updating tge tiltle for tag comparison</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
